<resources>
    <string name="app_name">Von Clicker</string>
    <string name="tap">Tap!</string>

    <!-- temp -->
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="welcome_message">It\'s currently %1$s.</string>
    <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
    <string name="login_prompt">Login to set customizations!</string>

    <string name="settings_fact_type_title">Fun Fact Type</string>

    <string name="fact_type_android">Android</string>
    <string name="fact_type_california">California</string>
    <!--Shared Preference Keys -->
    <string name="preference_fact_type_key">fact_type_pref</string>
    <string name="title_activity_nav_draw">navDrawAct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="imageTapDescr">The pic that\'s going to be tapped af</string>


</resources>
